# DOJO-NearX-Bitcoin

back-end/: dockerfile  package-lock.json  package.json  server.js
back-end-rust/bitcoin_service/: .env  .gitignore  Cargo.toml  bitcoin.conf
back-end-rust/bitcoin_service/src/: main.rs
back-end-rust/bitcoin_service/src/config/: constants.rs  env.rs  env_globals.rs  mod.rs  routes.rs  swagger.rs
back-end-rust/bitcoin_service/src/models/: add_funds.rs  block.rs  mod.rs  send.rs  transaction.rs  wallet_response.rs
back-end-rust/bitcoin_service/src/services/: mod.rs  polar.rs
