[package]
name = "bitcoin_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.1"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.10.0"